# PIPNAV

./: .gitignore  AGENTS.md  CLAUDE.md  PIPNAV-SPEC.md  pyproject.toml
.claude/: settings.local.json
docs/: functionality-priorities.md  next-steps.md
pipnav/: __init__.py  main.py
pipnav/core/: __init__.py  audio.py  claude_sessions.py  config.py  flavor.py  git.py  indexer.py  launcher.py  logging.py  memory.py  notes.py  profiles.py  projects.py  search.py  session_center.py  sessions.py  stats.py  utils.py  watcher.py
pipnav/sounds/: player.cs  player.ps1
pipnav/ui/: __init__.py  app.tcss  boot_screen.py  crt_overlay.py  files_tab.py  header.py  help_overlay.py  idle_screen.py  inventory_tab.py  launch_builder.py  log_tab.py  memory_editor.py  profile_editor.py  profile_switcher.py  project_detail.py  project_list.py  recipe_editor.py  recipe_picker.py  search_bar.py  session_center_tab.py  sessions_tab.py  status_bar.py
tests/: test_audio.py  test_claude_sessions.py  test_config.py  test_git.py  test_indexer.py  test_launcher.py  test_main_refresh.py  test_memory.py  test_notes.py  test_profile_editor.py  test_profiles.py  test_project_list.py  test_projects.py  test_recipe_editor.py  test_search.py  test_session_center.py  test_sessions.py  test_status_bar.py  test_watcher.py
