[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipnav"
version = "0.1.0"
description = "Fallout Pip-Boy themed TUI for navigating and launching development projects"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.79.0",
    "gitpython>=3.1.40",
]

[project.scripts]
pipnav = "pipnav.main:main"

[tool.setuptools.packages.find]
include = ["pipnav*"]

[tool.setuptools.package-data]
pipnav = ["ui/*.tcss", "sounds/*.mp3", "sounds/*.wav"]

[tool.pytest.ini_options]
testpaths = ["tests"]
